# Sequential

./: .gitattributes  .gitignore  Credits.rtf  DOMNodeAdditions.h  DOMNodeAdditions.m  History.txt  Info.plist  License.txt  NSAffineTransformAdditions.h  NSAffineTransformAdditions.m  NSArrayAdditions.h  NSArrayAdditions.m  NSAttributedStringAdditions.h  NSAttributedStringAdditions.m  NSBezierPathAdditions.h  NSBezierPathAdditions.m  NSCharacterSetAdditions.h  NSCharacterSetAdditions.m  NSColorAdditions.h  NSColorAdditions.m  NSControlAdditions.h  NSControlAdditions.m  NSDateAdditions.h  NSDateAdditions.m  NSImageAdditions.h  NSImageAdditions.m  NSImageRepAdditions.h  NSImageRepAdditions.m  NSMenuItemAdditions.h  NSMenuItemAdditions.m  NSMutableDictionaryAdditions.h  NSMutableDictionaryAdditions.m  NSNumberAdditions.h  NSNumberAdditions.m  NSObjectAdditions.h  NSObjectAdditions.m  NSScannerAdditions.h  NSScannerAdditions.m  NSScreenAdditions.h  NSScreenAdditions.m  (+209 more)
BadLicense/: RARUnpacker.cpp  RARUnpacker.h  XADRAROfficialHandle.h  XADRAROfficialHandle.m
Document Icons/: Document-BMP.icns  Document-CBR.icns  Document-CBZ.icns  Document-CRW.icns  Document-EPI.icns  Document-EXR.icns  Document-FAX.icns  Document-FPX.icns  Document-GIF.icns  Document-ICNS.icns  Document-ICO.icns  Document-JP2.icns  Document-JPG.icns  Document-PDF.icns  Document-PIC.icns  Document-PICT.icns  Document-PNG.icns  Document-PNTG.icns  Document-PSD.icns  Document-QTIF.icns  Document-RAR.icns  Document-SGI.icns  Document-TGA.icns  Document-TIFF.icns  Document-XBM.icns  Document-ZIP.icns
English.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings  PGAbout.xib  PGActivity.xib  PGDocument.xib  PGExif.xib  PGMenu.xib  PGPreference.xib  PGURL.xib
French.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings  PGActivity.xib  PGDocument.xib  PGEncoding.xib  PGExif.xib  PGImageSave.xib  PGMenu.xib  PGTimer.xib  PGURL.xib
Japanese.lproj/: Localizable.strings  PGAbout.xib  PGActivity.xib  PGDocument.xib  PGEncoding.xib  PGExif.xib  PGImageSave.xib  PGMenu.xib  PGPreference.xib  PGTimer.xib  PGURL.xib
Polish.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings  PGActivity.xib  PGDocument.xib  PGEncoding.xib  PGExif.xib  PGImageSave.xib  PGMenu.xib  PGTimer.xib  PGURL.xib  Polish.lproj idx  Polish.lproj.helpindex
Russian.lproj/: Credits.rtf  Localizable.strings  PGAbout.xib  PGActivity.xib  PGDocument.xib  PGEncoding.xib  PGExif.xib  PGImageSave.xib  PGMenu.xib  PGPreference.xib  PGTimer.xib  PGURL.xib
Sequential/: Information RU.txt  Information.txt  License.txt
Sequential.xcodeproj/: dan.mode1v3  dan.pbxuser  pi.mode2  pi.perspective  project.pbxproj
Spanish.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings  PGActivity.xib  PGDocument.xib  PGEncoding.xib  PGExif.xib  PGImageSave.xib  PGMenu.xib  PGTimer.xib  PGURL.xib  Spanish.lproj idx  Spanish.lproj.helpindex
Sparkle/: SUBasicUpdateDriver.m  SUHost.m  SUUpdateAlert.h  SUUpdateAlert.m
UniversalDetector/: DetectorTest.m  Info.plist  Makefile.common  Makefile.depend  Makefile.legacy  Makefile.linux  Makefile.windows  UniversalDetector.m  WrappedUniversalDetector.cpp
XADMaster/: BWT.c  CRC.m  CSBlockStreamHandle.m  CSByteStreamHandle.m  CSBzip2Handle.m  CSCommandLineParser.h  CSCommandLineParser.m  CSFileHandle.h  CSFileHandle.m  CSHandle.h  CSHandle.m  CSHexDump.h  CSHexDump.m  CSInputBuffer.h  CSInputBuffer.m  CSJSONPrinter.h  CSJSONPrinter.m  CSMemoryHandle.h  CSMemoryHandle.m  CSMultiHandle.h  CSMultiHandle.m  CSStreamHandle.h  CSStreamHandle.m  CSSubHandle.h  CSSubHandle.m  CSZlibHandle.m  CarrylessRangeCoder.h  CarrylessRangeCoder.m  Checksums.m  CommandLineCommon.h  CommandLineCommon.m  Info.plist  LZSS.c  LZW.c  Makefile.common  Makefile.depend  Makefile.legacy  Makefile.linux  Makefile.windows  NSDateXAD.h  (+310 more)
XADMaster/libxad_reject/portable/: Makefile.in  configure.ac  cvsbuild.sh  cvsclean.sh  libtool  libxad.spec
XADMaster/libxad_reject/portable/_install/include/: xadmaster.h
XADMaster/libxad_reject/portable/_install/lib/: libxad.0.dylib
XADMaster/libxad_reject/portable/amiga/: hook_fh.c  libinit.c  os4specific.h  stubs.c  stubs.h  xadClient.h  xadXPK.c  xadmaster_68k.c
XADMaster/libxad_reject/portable/clients/: HA.c  Makefile.in
XADMaster/libxad_reject/portable/include/: Makefile  SDI_ASM_STD_functions.lib  mkproto.pl
XADMaster/libxad_reject/portable/old/: LhA.c  StuffIt.c
XADMaster/libxad_reject/portable/test/: extract.c  open.c  tags.c
XADMaster/libxad_reject/portable/tools/: checkx.c
libxad MODIFIED/portable/clients/: 7-Zip.c  Cpio.c  DCS.c  DMS.c  LhA.c  Makefile  Makefile.am  RPM.c  Rar.c  StuffIt.c  SuperDuper3.c  Tar.c  bzip2.c  xDisk.c  xMash.c  xadCRC_1021.c  xadIO_XPK.c
libxad MODIFIED/portable/clients/rar_cpp/: rar.hpp  xad.cpp
libxad/portable/: Makefile  Makefile.am  aclocal.m4  clientfunc.c  config.h.in  cs_c64_to_unicode.c  dates.c  debug.c  diskfile.c  diskunarc.c  filename.c  functions.def  hook.c  hook_diskarc.c  hook_stream.c  libxad.spec.in  objects.c  protection.c
libxad/portable/amiga/: SMakeFile  hook_disk.c
libxad/portable/autom4te.cache/: output.0  traces.0
libxad/portable/clients/: 7-Zip.c  AMPK.c  Ace.c  BinHex.c  CAB.c  Cpio.c  CrunchDisk.c  DCS.c  DMS.c  DiskDoubler.c  FS_Amiga.c  FS_FAT.c  FS_SOS.c  HA.c  IFF-CDAF.c  LZX.c  LhA.c  LhF.c  MDC.c  MXM-SimpleArc.c  PackDev.c  PackDisk.c  RPM.c  Rar.c  StuffIt.c  TR-DOS.c  Tar.c  Zip.c  Zoom.c  bzip2.c  xDisk.c  xMash.c  xadIO.c
libxad/portable/clients/rar_cpp/: xad.cpp
libxad/portable/include/: ConvertE.c  Makefile.am  Makefile.in  SDI_version.h  functions.h  xadmaster.h
libxad/portable/mac/: XADArchive.h  XADArchive.m  XADArchivePipe.m  XADRegex.m
libxad/portable/mac UNMODIFIED/: XADArchive.m  XADArchivePipe.m  XADRegex.m
libxad/portable/mac UNMODIFIED/XADMaster.xcodeproj/: dag.mode1  project.pbxproj  siegel.mode1
libxad/portable/mac/XADMaster.xcodeproj/: pi.perspective  project.pbxproj
libxad/portable/morphos/: Makefile
libxad/portable/unix/: emulation.c  hook_fh.c  xadClient.h  xadXPK.c
(+1097 files in other folders)
